--- a/client/next-app/package.json
+++ b/client/next-app/package.json
@@ -12,7 +12,9 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "express": "^4.18.2",
     "flowbite": "^1.6.6",
+    "mongoose": "^7.3.0",
     "next": "^13.4.5",
     "postcss": "8.4.24",
     "react": "18.2.0",
